syntax = "proto3";

package proto;

option go_package = "/tinycache";

service Cache {
	rpc Add (AddRequest) returns (AddResponse) {}
	rpc Get (GetRequest) returns (GetResponse) {}
}

message AddRequest {
	string key = 1;
	string data = 2;
	string expires = 3;
}

message AddResponse {
	string error = 1;
}

message GetRequest {
	string key = 1;
}

message GetResponse {
	string data = 1;
	string error = 2;
}
